// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Card /> renders the <Card /> 1`] = `
<div
  class="sc-dvQaRk hNyyuc"
>
  <section
    class="sc-TBWPX grpbFE"
  >
    <h1
      class="sc-jIkXHa EUXkj"
    >
      Documentaries
    </h1>
    <div
      class="sc-bTfYFJ cTpSSo"
    >
      <div
        class="sc-eLwHnm fIseIx"
      >
        <img
          class="sc-kHOZwM jHVaWf"
          src="/images/series/documentaries/tiger-king/small.jpg"
        />
        <div
          class="sc-ZOtfp hHYCuM"
        >
          <p
            class="sc-jOxtWs edIixX"
          >
            Tiger King
          </p>
          <p
            class="sc-hmjpVf dthDqd"
          >
            Tiger King description
          </p>
        </div>
      </div>
    </div>
  </section>
  <section
    class="sc-TBWPX grpbFE"
  >
    <h1
      class="sc-jIkXHa EUXkj"
    >
      Feel Good
    </h1>
    <div
      class="sc-bTfYFJ cTpSSo"
    >
      <div
        class="sc-eLwHnm fIseIx"
      >
        <img
          class="sc-kHOZwM jHVaWf"
          src="/images/series/feel-good/juno/small.jpg"
        />
        <div
          class="sc-ZOtfp hHYCuM"
        >
          <p
            class="sc-jOxtWs edIixX"
          >
            Juno
          </p>
          <p
            class="sc-hmjpVf dthDqd"
          >
            Juno description
          </p>
        </div>
      </div>
    </div>
  </section>
</div>
`;

exports[`<Card /> renders the <Card /> with and clicks the card feature 1`] = `
<div
  class="sc-dvQaRk hNyyuc"
>
  <section
    class="sc-TBWPX grpbFE"
  >
    <h1
      class="sc-jIkXHa EUXkj"
    >
      Documentaries
    </h1>
    <div
      class="sc-bTfYFJ cTpSSo"
    >
      <div
        class="sc-eLwHnm fIseIx"
        data-testid="tiger-king-item-feature"
      >
        <img
          class="sc-kHOZwM jHVaWf"
          src="/images/series/documentaries/tiger-king/small.jpg"
        />
        <div
          class="sc-ZOtfp hHYCuM"
        >
          <p
            class="sc-jOxtWs edIixX"
          >
            Tiger King
          </p>
          <p
            class="sc-hmjpVf dthDqd"
          >
            Tiger King description
          </p>
        </div>
      </div>
    </div>
  </section>
  <section
    class="sc-TBWPX grpbFE"
  >
    <h1
      class="sc-jIkXHa EUXkj"
    >
      Feel Good
    </h1>
    <div
      class="sc-bTfYFJ cTpSSo"
    >
      <div
        class="sc-eLwHnm fIseIx"
        data-testid="juno-item-feature"
      >
        <img
          class="sc-kHOZwM jHVaWf"
          src="/images/series/feel-good/juno/small.jpg"
        />
        <div
          class="sc-ZOtfp hHYCuM"
        >
          <p
            class="sc-jOxtWs edIixX"
          >
            Juno
          </p>
          <p
            class="sc-hmjpVf dthDqd"
          >
            Juno description
          </p>
        </div>
      </div>
    </div>
  </section>
</div>
`;
